k8s/omada/resources/omada.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    spec:
      hostNetwork: true
      containers:
        - name: omada
          image: mbentley/omada-controller:beta-5.14.30.7@sha256:1ef5fa0a27fefa44a3a991553dc930a376f039a4c13c0fd5b60b0b14f241fe3b
          ports:
            - name: https
              containerPort: 8043
          volumeMounts:
            - name: volume
              subPath: data
              mountPath: /opt/tplink/EAPController/data
            - name: volume
              subPath: logs
              mountPath: /opt/tplink/EAPController/logs
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: https
      port: 443
      targetPort: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://omada.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: omada
    gethomepage.dev/group: Other
    gethomepage.dev/icon: omada
    gethomepage.dev/name: Omada
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/upstream-vhost: 'omada.durbin.casa:8043'
    nginx.ingress.kubernetes.io/proxy-redirect-from: '~https://(.+):8043/(.+)/login$'
    nginx.ingress.kubernetes.io/proxy-redirect-to: 'https://$1/$2/login'
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-web-service.auth.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.durbin.casa/oauth2/start
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Preferred-Username
spec:
  ingressClassName: internal
  rules:
    - host: &host omada.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: https
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
